# quant_trading

./: .gitignore  CMakeLists.txt  README.md  data_prepare.py  gpt_prompt.txt  make.sh  nbeats.py  requirements.txt
api/: CMakeLists.txt  make.sh
api/include/: Decimal.h
api/src/: main.cpp
data/: add_feature_to_ori_data.py  feature_analysis.py  feature_engineering.py  final_features.py  get_data.py  get_newest_data.py  get_realtime_data.py  split_to_daily.py
data/daily_data/: SPY_intraday_2024-03-25.csv  SPY_intraday_2024-03-26.csv  SPY_intraday_2024-03-27.csv  SPY_intraday_2024-03-28.csv  SPY_intraday_2024-04-01.csv  SPY_intraday_2024-04-02.csv  SPY_intraday_2024-04-03.csv  SPY_intraday_2024-04-04.csv  SPY_intraday_2024-04-05.csv  SPY_intraday_2024-04-08.csv  SPY_intraday_2024-04-09.csv  SPY_intraday_2024-04-10.csv  SPY_intraday_2024-04-11.csv  SPY_intraday_2024-04-12.csv  SPY_intraday_2024-04-15.csv  SPY_intraday_2024-04-16.csv  SPY_intraday_2024-04-17.csv  SPY_intraday_2024-04-18.csv  SPY_intraday_2024-04-19.csv  SPY_intraday_2024-04-22.csv  SPY_intraday_2024-04-23.csv  SPY_intraday_2024-04-24.csv  SPY_intraday_2024-04-25.csv  SPY_intraday_2024-04-26.csv  SPY_intraday_2024-04-29.csv  SPY_intraday_2024-04-30.csv  SPY_intraday_2024-05-01.csv  SPY_intraday_2024-05-02.csv  SPY_intraday_2024-05-03.csv  SPY_intraday_2024-05-06.csv  SPY_intraday_2024-05-07.csv  SPY_intraday_2024-05-08.csv  SPY_intraday_2024-05-09.csv  SPY_intraday_2024-05-10.csv  SPY_intraday_2024-05-13.csv  SPY_intraday_2024-05-14.csv  SPY_intraday_2024-05-15.csv  SPY_intraday_2024-05-16.csv  SPY_intraday_2024-05-17.csv  SPY_intraday_2024-05-20.csv  (+51 more)
data/original_data/: SPY_intraday_2024-04-01_to_2024-07-30.csv  SPY_original_2024-04-07_to_2024-08-05.csv
documents/: README.md  README_REALTIMEDATA.md  gpt_prompt.md  realtime_data_fetching_cpp.md
include/: Logger.h  ReadTimeData.h  RealTimeData.h  SharedMemoryServer.h  TimescaleDB.h
model/: nbeats.py
src/: main.cpp
src/data/: Logger.cpp  ReadTimeDate.cpp  RealTimeData.cpp  SharedMemoryServer.cpp
src/database/: TimescaleDB.cpp
src/logger/: Logger.cpp
test/: ib_test.py  polygon.py  polygon_l2.py
test/data/daily_data/: SPY_intraday_2024-04-02.csv  SPY_intraday_2024-04-03.csv  SPY_intraday_2024-04-04.csv  SPY_intraday_2024-04-05.csv  SPY_intraday_2024-04-08.csv  SPY_intraday_2024-04-09.csv  SPY_intraday_2024-04-10.csv  SPY_intraday_2024-04-11.csv  SPY_intraday_2024-04-12.csv  SPY_intraday_2024-04-15.csv  SPY_intraday_2024-04-16.csv  SPY_intraday_2024-04-17.csv  SPY_intraday_2024-04-18.csv  SPY_intraday_2024-04-19.csv  SPY_intraday_2024-04-22.csv  SPY_intraday_2024-04-23.csv  SPY_intraday_2024-04-24.csv  SPY_intraday_2024-04-25.csv  SPY_intraday_2024-04-26.csv  SPY_intraday_2024-04-29.csv  SPY_intraday_2024-04-30.csv  SPY_intraday_2024-05-01.csv  SPY_intraday_2024-05-02.csv  SPY_intraday_2024-05-03.csv  SPY_intraday_2024-05-06.csv  SPY_intraday_2024-05-07.csv  SPY_intraday_2024-05-08.csv  SPY_intraday_2024-05-09.csv  SPY_intraday_2024-05-10.csv  SPY_intraday_2024-05-13.csv  SPY_intraday_2024-05-14.csv  SPY_intraday_2024-05-15.csv  SPY_intraday_2024-05-16.csv  SPY_intraday_2024-05-17.csv  SPY_intraday_2024-05-20.csv  SPY_intraday_2024-05-21.csv  SPY_intraday_2024-05-22.csv  SPY_intraday_2024-05-23.csv  SPY_intraday_2024-05-24.csv  SPY_intraday_2024-05-28.csv  (+44 more)
test/data/original_data/: SPY_intraday_2024-04-02_to_2024-07-31.csv
